--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.2",
     "mongoose": "^5.9.7",
+    "morgan": "^1.10.0",
     "notes": "0.0.4"
   }
 }
